--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
