--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
